# OrthancDocker

./: README.md
atomit/: Dockerfile  create-config.sh  download-atomit.sh  setup-debian.sh
base/: Dockerfile  build.sh
orthanc/: Dockerfile  build.sh  create-config.sh  download-orthanc.sh  setup-locales.sh
orthanc-big/: Dockerfile  build-orthanc.sh
orthanc-debug/: Dockerfile  build-orthanc.sh
orthanc-plugins/: Dockerfile  build-dicomweb.sh  build-postgresql.sh  build-webviewer.sh  build-wsi.sh  download-plugins.sh
orthanc-plugins-big/: Dockerfile  build-dicomweb.sh  build-orthanc.sh  build-postgresql.sh  build-webviewer.sh  build-wsi.sh  build.sh
orthanc-python/: CMakeLists.txt  Dockerfile  build.sh  download-python.sh
orthanc-slim/: Dockerfile  download-lsb.sh  setup-locales.sh
orthanc-tests/: Dockerfile
wasm-builder/: Dockerfile  UploadDocker.sh  download-emscripten.sh  download-lsb.sh
